madrugadinha do hard trabalho
Atualizações nos resultados e adição da base com a área dos municípios

--- a/output/twfe_did2.tex
+++ b/output/twfe_did2.tex
@@ -1,24 +1,26 @@
 
 \begin{table}[!htbp] \centering 
-  \caption{Efeito da entrada da Guarda Municipal sobre diferentes tipos de ocorrências criminais - TWFE} 
-  \label{twfe_did} 
+  \caption{Efeito da entrada da Guarda Municipal sobre diferentes tipos de ocorrências criminais - TWFE - Parte 2} 
+  \label{twfe_did2} 
 \begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{6}{c}{Tipo de ocorrência} \\ 
 \cline{2-7} 
- & RF (veículos) & RF (outros) & Latrocinio & Homicídio & LCD & Estupro \\ 
+ & \multicolumn{2}{c}{Homicídio} & \multicolumn{2}{c}{LCD} & \multicolumn{2}{c}{Estupro} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- Entrada da GM & $-$5.778 & 13.910 & $-$0.008 & 0.334 & 1.375 & 0.080 \\ 
-  & (10.627) & (52.826) & (0.208) & (1.483) & (26.019) & (2.752) \\ 
+ Entrada da GM & 0.334 & 0.534 & 1.375 & 6.058 & 0.080 & 1.259 \\ 
+  & (1.483) & (1.503) & (26.019) & (26.134) & (2.752) & (2.823) \\ 
  \hline \\[-1.8ex] 
 EF. Município & Sim & Sim & Sim & Sim & Sim & Sim \\ 
 EF. Ano & Sim & Sim & Sim & Sim & Sim & Sim \\ 
+Controles & Não & Sim & Não & Sim & Não & Sim \\ 
 Observations & 4,580 & 4,580 & 4,580 & 4,580 & 4,580 & 4,580 \\ 
-R$^{2}$ & 0.713 & 0.836 & 0.119 & 0.237 & 0.615 & 0.244 \\ 
+R$^{2}$ & 0.237 & 0.237 & 0.615 & 0.616 & 0.244 & 0.245 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+ & \multicolumn{6}{r}{PIB per capita e densidade populacional são controles.} \\ 
 \end{tabular} 
 \end{table} 
