--- a/output/twfe_did1.tex
+++ b/output/twfe_did1.tex
@@ -10,8 +10,8 @@
  & \multicolumn{2}{c}{RF (veículos)} & \multicolumn{2}{c}{RF (outros)} & \multicolumn{2}{c}{Latrocinio} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- Entrada da GM & $-$5.778 & $-$7.106 & 13.910 & 28.975 & $-$0.008 & $-$0.005 \\ 
-  & (10.627) & (10.201) & (52.826) & (53.445) & (0.208) & (0.205) \\ 
+ Entrada da GM & $-$5.778 & $-$7.268 & 13.910 & 32.781 & $-$0.008 & $-$0.028 \\ 
+  & (10.627) & (10.016) & (52.826) & (52.401) & (0.208) & (0.205) \\ 
  \hline \\[-1.8ex] 
 EF. Município & Sim & Sim & Sim & Sim & Sim & Sim \\ 
 EF. Ano & Sim & Sim & Sim & Sim & Sim & Sim \\ 
@@ -21,6 +21,6 @@ R$^{2}$ & 0.713 & 0.713 & 0.836 & 0.837 & 0.119 & 0.119 \\
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
- & \multicolumn{6}{r}{PIB per capita e densidade populacional são controles.} \\ 
+ & \multicolumn{6}{r}{PIB per capita, densidade populacional e nº de famílias beneficiárias do Bolsa Família são controles.} \\ 
 \end{tabular} 
 \end{table} 
