--- a/output/twfe_did2.tex
+++ b/output/twfe_did2.tex
@@ -10,8 +10,8 @@
  & \multicolumn{2}{c}{Homicídio} & \multicolumn{2}{c}{LCD} & \multicolumn{2}{c}{Estupro} \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- Entrada da GM & 0.334 & 0.534 & 1.375 & 6.058 & 0.080 & 1.259 \\ 
-  & (1.483) & (1.503) & (26.019) & (26.134) & (2.752) & (2.823) \\ 
+ Entrada da GM & 0.334 & 0.519 & 1.375 & 6.044 & 0.080 & 1.424 \\ 
+  & (1.483) & (1.512) & (26.019) & (26.147) & (2.752) & (2.842) \\ 
  \hline \\[-1.8ex] 
 EF. Município & Sim & Sim & Sim & Sim & Sim & Sim \\ 
 EF. Ano & Sim & Sim & Sim & Sim & Sim & Sim \\ 
@@ -21,6 +21,6 @@ R$^{2}$ & 0.237 & 0.237 & 0.615 & 0.616 & 0.244 & 0.245 \\
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
- & \multicolumn{6}{r}{PIB per capita e densidade populacional são controles.} \\ 
+ & \multicolumn{6}{r}{PIB per capita, densidade populacional e nº de famílias beneficiárias do Bolsa Família são controles.} \\ 
 \end{tabular} 
 \end{table} 
